--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;800&family=Raleway:wght@400;600"
+      as="style"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;800&family=Raleway:wght@400;600"
+    />
+    <style>
+/*       @font-face {
+        font-family: "Open Sans", "Raleway";
+        src: url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;800&family=Raleway:wght@400;600");
+      }
+ */
+      body {
+        font-family: "Raleway";
+      }
+    </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
