--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
+   <!--  <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;800&family=Raleway:wght@400;600"
       as="style"
@@ -9,13 +9,14 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;800&family=Raleway:wght@400;600"
-    />
+    /> -->
     <style>
-/*       @font-face {
+       @font-face {
         font-family: "Open Sans", "Raleway";
-        src: url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;800&family=Raleway:wght@400;600");
+        font-display: block;
+        src: url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Raleway:wght@400");
       }
- */
+ 
       body {
         font-family: "Raleway";
       }
