FOUT rendering >> font display: optional

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
     /> -->
     <style>
        @font-face {
-        font-family: "Open Sans", "Raleway";
-        font-display: block;
+        font-family: "Raleway", "Open Sans";
+        font-display: optional;
         src: url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Raleway:wght@400");
       }
  
       body {
-        font-family: "Raleway";
+        font-family: "Raleway", "Open Sans", "Arial";
       }
     </style>
     <meta charset="utf-8" />
